--- a/flask/app/templates/radar.html
+++ b/flask/app/templates/radar.html
@@ -10,7 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../static/css/index.css"> -->
 
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -46,8 +46,8 @@
     // var width = 960,
     //     height = 500,
     //     barHeight = height / 2 - 40;
-    var width = 360,
-        height = 188,
+    var width = 215,
+        height = 215,
         barHeight = height / 2 - 40;    
     
     var formatNumber = d3.format("s");
