--- a/flask/app/static/css/style.css
+++ b/flask/app/static/css/style.css
@@ -2,6 +2,7 @@
         .card {
             /* border: 0; */
             padding-left: 5px;
+            color: #3d6087;
         }
 
         .section {
@@ -42,4 +43,24 @@
 
         .btn:focus {
             outline: none;
+        }
+
+        .h5 {
+            color: #3d6087;
+        }
+        
+        .title-description{
+            color: #3d6087;
+            margin-left:20px;
+        }
+
+        .header {
+            background-color: #3d6087; 
+            color: white;
+            padding-top:10px;
+            padding-bottom:10px;
+        }
+        
+        .header-title-description{
+            margin-left:20px;
         }
