--- a/flask/app/static/css/style.css
+++ b/flask/app/static/css/style.css
@@ -64,4 +64,6 @@
             background-color: #b7b7b7;
             border-color: #6c757d;
         }
-
+        .mt-3, .my-3 {
+            margin-bottom: 100px;
+        }
