--- a/flask/app/templates/index2.html
+++ b/flask/app/templates/index2.html
@@ -104,7 +104,7 @@
                     </div>
                     <div id='vizNutritionalVs' class="mt-2"></div>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm" id = "words">
                     <span class="h5">Word<br />Cloud</span><span class="title-description">Popular tags for all
                         recipes</span>
                     <div id="chart" class="mt-3" style="width: auto; height: 500px;">
