--- a/flask/app/templates/index2.html
+++ b/flask/app/templates/index2.html
@@ -87,7 +87,7 @@
             <div class="container-fluid row">
                 <div class="col-sm">
                     <span class="h5">Nutritional<br />Information</span><span class="title-description">Compare calories
-                        agains fat or protein for all recipes</span>
+                        against fat or protein for all recipes</span>
                     <div class="btn-group btn-group-toggle mt-3" id="nutritionalButtons" data-toggle="buttons">
                         <label class="btn active">
                             <input type="radio" name="options" id="fat" autocomplete="off" checked
@@ -107,7 +107,7 @@
                 <div class="col-sm">
                     <span class="h5">Word<br />Cloud</span><span class="title-description">Popular tags for all
                         recipes</span>
-                    <div id="chart" class="mt-3" style="width: auto; height: 500px;">
+                    <div id="chart" class="mt-3" src="word_cloud" style="width: auto; height: 500px;">
                         <!-- Wordcloud is drawn here -->
                     </div>
 
